<package>
  <name>wangbx_robot_gazebo</name>
  <version>2.2.3</version>
  <description>Gazebo launchers and worlds for TurtleBot simulation</description>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_gazebo</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_simulator</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_simulator/issues</url>
  <author email="turtlebot@willowgarage.com">Willow Garage</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>wangbx_robot_description</run_depend>
  <run_depend>xacro</run_depend>
</package>
