<?xml version="1.0"?>
<package>
  <name>wangbx_robot_mapping</name>
  <version>2.4.2</version>
  <description>wangbx_robot_mapping</description>
  <maintainer email="xuanbowang@lslidar.com">Boxuan Wang</maintainer>
  <license>BSD</license>
  
  <author email="xuanbowang@lslidar.com">Boxuan Wang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
