<?xml version="1.0"?>
<package>
  <name>wangbx_robot_qt_teleop</name>
  <version>0.0.0</version>
  <description>The wangbx_robot_qt_teleop package</description>

  <maintainer email="xuanbowang@lslidar.com">Boxuan Wang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>

  </export>
</package>
